fix: make overflow styles more targeted

--- a/website/app/styles/pages/components/pagination.scss
+++ b/website/app/styles/pages/components/pagination.scss
@@ -13,7 +13,7 @@
   }
 
   // Some Pagination examples overflow
-  .doc-code-block__code-rendered {
+  .doc-code-group__preview {
     overflow: auto;
   }
 }
